--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
-1. github page 설정을 이미 github actions로 배포하도록 설정했고, gh-pages라는 브랜치를 만들었어. 
+# 1. github page 설정을 이미 github actions로 배포하도록 설정했고,
+# gh-pages라는 브랜치를 만들었어. gh-pages 에서는 아무 항목도 없어.
+# 너가 리액트로 표준 구축 환경을 만들고, 커밋 푸시하면 자동으로 gh-pages에 배포되도록
+# CI/CD 파이프라인을 설정해야 해.
