--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
-# 1. github page 설정을 이미 github actions로 배포하도록 설정했고,
-# gh-pages라는 브랜치를 만들었어. gh-pages 에서는 아무 항목도 없어.
-# 너가 리액트로 표준 구축 환경을 만들고, 커밋 푸시하면 자동으로 gh-pages에 배포되도록
-# CI/CD 파이프라인을 설정해야 해.
+# 필수 작업 순서
+
+1. TODO의 각 항목을 docs를 참고하고, Git 브랜치가 현재 무엇인지 파악합니다.
+2. 모든 TODO 항목을 작업합니다.
+3. TODO 항목이 해결되었는지 검증합니다.
+4. 해결된 항목은 직접 GitHub에 푸시합니다.
+5. 해결한 항목은 체크리스트에서 제거합니다.
+6. TODO 파일을 업데이트합니다.
